fixed spacing and images

--- a/src/Pages/IndividualCloset.css
+++ b/src/Pages/IndividualCloset.css
@@ -7,7 +7,7 @@
     display: flex;
     padding: 5%;
     padding-top: 5%;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     gap: 10px;
 }
